--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^1.9.7",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
+    "chart.js": "^4.4.1",
     "http-proxy": "^1.18.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
