--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,10 +15,12 @@
     "axios": "^1.6.0",
     "chart.js": "^4.4.1",
     "http-proxy": "^1.18.1",
+    "multiselect-react-dropdown": "^2.0.25",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-select-component": "^4.3.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "redux": "^4.2.1",
