--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,6 +23,7 @@
     "react-multi-select-component": "^4.3.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "react-select": "^5.8.0",
     "redux": "^4.2.1",
     "tailwindcss": "^3.3.5"
   },
